--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -9,14 +9,14 @@
 
 = Details =
 
-1. *Checkout*:
+=== Checkout ===
 
 svn checkout http://scajorp.googlecode.com/svn/trunk/ scajorp-read-only
 
 
 
 
-2. *Run* the examples:
+2. === Examples === 
 
 _Run_:  cd scajorp-read-only/scajorp-examples
 
@@ -27,7 +27,7 @@ _Goto_: http://localhost:8080/ , look at the tiny raw example and at the corresp
 
 
 
-3. *Use* Scajorp in your own application:
+3. === Use ===
 
 mvn install the scajorp-api file and put it on your classpath.
 
